--- a/app/src/main/res/drawable/pink_border.xml
+++ b/app/src/main/res/drawable/pink_border.xml
@@ -4,9 +4,8 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/pink"/>
+        android:color="@color/pink" />
 
-    <corners
-        android:radius="8dp"/>
+    <corners android:radius="8dp" />
 
 </shape>
